--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "tiptap": "^1.14.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
+    "vue2-editor": "^2.6.6",
     "vuetify": "^1.5.9",
     "vuex": "^3.0.1"
   },
@@ -19,9 +22,13 @@
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-typescript": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
+    "css-loader": "^2.1.1",
     "material-design-icons-iconfont": "^4.0.5",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "typescript": "^3.2.1",
     "vue-template-compiler": "^2.5.21"
   }
