--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
-    "tiptap": "^1.14.0",
     "vue": "^2.6.6",
+    "vue-authenticate": "^1.4.1",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
+    "vue-social-sharing": "^2.4.3",
     "vue2-editor": "^2.6.6",
     "vuetify": "^1.5.9",
     "vuex": "^3.0.1"
