--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,35 @@
 {
     "eslint.alwaysShowStatus": true,
     "eslint.autoFixOnSave": true,
+    "editor.formatOnSave": false,
+    "vetur.validation.template": false,
     "workbench.colorCustomizations": {
-        "titleBar.activeBackground": "#42b883",
-        "titleBar.inactiveBackground": "#42b88399",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveForeground": "#15202b99"
+        "titleBar.activeBackground": "#b74ee7",
+        "titleBar.inactiveBackground": "#b74ee799",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
     "prettier.eslintIntegration": true,
     "prettier.jsxSingleQuote": true,
     "prettier.singleQuote": true,
     "prettier.stylelintIntegration": true,
-    "prettier.tslintIntegration": true
+    "prettier.tslintIntegration": true,
+    "eslint.validate": [
+        {
+            "language": "vue",
+            "autoFix": true
+        },
+        {
+            "language": "javascript",
+            "autoFix": true
+        },
+        {
+            "language": "javascriptreact",
+            "autoFix": true
+        }
+    ],
+    "files.exclude": {
+        "**/__pycache__": true,
+        "**/*.pyc": true
+    }
 }
