--- a/nuxt-frontend/package.json
+++ b/nuxt-frontend/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/toast": "^3.1.0",
+    "cloudinary-vue": "^1.0.0-beta2",
     "cross-env": "^5.2.0",
     "nuxt": "^2.4.0",
     "nuxt-izitoast": "^0.1.2",
