--- a/nuxt-frontend/package.json
+++ b/nuxt-frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nuxt-frontend",
+  "name": "paperwiff",
   "version": "1.0.0",
-  "description": "Paperwiff frontend app",
+  "description": "",
   "author": "NavaneethVijay",
   "private": true,
   "scripts": {
@@ -18,6 +18,7 @@
     "@nuxtjs/toast": "^3.1.0",
     "cloudinary-vue": "^1.0.0-beta2",
     "cross-env": "^5.2.0",
+    "firebase": "^6.0.2",
     "nuxt": "^2.4.0",
     "nuxt-izitoast": "^0.1.2",
     "vue-authenticate": "^1.4.1",
