added infite scroll on all stories, pending in other listing pages, fixed padding issue in profile page

--- a/nuxt-frontend/package.json
+++ b/nuxt-frontend/package.json
@@ -19,11 +19,14 @@
     "cloudinary-vue": "^1.0.0-beta2",
     "cross-env": "^5.2.0",
     "firebase": "^6.0.2",
+    "moment": "^2.24.0",
     "nuxt": "^2.4.0",
     "nuxt-izitoast": "^0.1.2",
     "vue-authenticate": "^1.4.1",
+    "vue-infinite-loading": "^2.4.4",
     "vue-quill-editor": "^3.0.6",
     "vue-social-sharing": "^2.4.3",
+    "vue-star": "0.0.4",
     "vuetify": "^1.5.5",
     "vuetify-loader": "^1.2.1"
   },
