--- a/nuxt-frontend/package.json
+++ b/nuxt-frontend/package.json
@@ -19,9 +19,13 @@
     "cloudinary-vue": "^1.0.0-beta2",
     "cross-env": "^5.2.0",
     "firebase": "^6.0.2",
+    "fuse.js": "^3.4.5",
     "moment": "^2.24.0",
     "nuxt": "^2.8.1",
     "nuxt-izitoast": "^0.1.2",
+    "tippy.js": "^4.3.4",
+    "tiptap": "^1.22.3",
+    "tiptap-extensions": "^1.22.3",
     "vue-authenticate": "^1.4.1",
     "vue-infinite-loading": "^2.4.4",
     "vue-quill-editor": "^3.0.6",
